--- a/pages/intro.html
+++ b/pages/intro.html
@@ -10,18 +10,18 @@
 </head>
 <body>
     <h1>New Media Design I</h1>
-    <h2>[PROJECT_NAME]</h2>
+    <h2>Eindopdracht</h2>
 
     <dl class="info">
         <dt>Naam</dt>
-        <dd>[STUDENT_NAAM]</dd>
+        <dd>Vanroy Jorne</dd>
         <dt>Studentnummer</dt>
-        <dd>[STUDENT_NR]</dd>
+        <dd>99684</dd>
         <dt>Klasgroep</dt>
-        <dd>[KLASGROEP]</dd>
+        <dd>1CMOBb</dd>
     </dl>
     <p>
-        <a href="http://deweirdt.be/nmd1/thanks.php?student_id=[STUDENT_NR]">Mijn opdracht</a>
+        <a href="http://deweirdt.be/nmd1/thanks.php?student_id=99684">Mijn opdracht</a>
     </p>
     
     <h1>Introductie</h1>
