Extra informatie introductie

--- a/pages/intro.html
+++ b/pages/intro.html
@@ -25,6 +25,6 @@
     </p>
     
     <h1>Introductie</h1>
-    <p>Als eindwerk hebben we de opdracht gekregen om een site te maken rondom een muziekband die jongeren tussen de 14 en 18 jaar luisteren. Ik heb bewust voor deze doelgroep gekozen omdat ik elke dag in contact sta met jongeren, zowel buiten als binnen school. Muziek is ook een deel van ons dagelijks leven waarmee we elke dag in contact komen te staan. Het hoofddoel van de website is om mensen van 14 tot 18 jaar te overtuigen om naar de muziekband te luisteren. De website moet dus functioneel makkelijk zijn voor jongeren. Op de website zal ook evenementen aangekondigd worden wanneer de muziekband zal optreden, ze een nieuw liedje uitbrengen en wanneer ze hun EP uitbrengen.</p>
+    <p>Als eindwerk hebben we de opdracht gekregen om een site te maken rondom een muziekband die jongeren tussen de 14 en 18 jaar luisteren. Ik heb bewust voor deze doelgroep gekozen omdat ik elke dag in contact sta met jongeren, zowel buiten als binnen school. Muziek is ook een deel van ons dagelijks leven waarmee we elke dag in contact komen te staan. Het hoofddoel van de website is om mensen van 14 tot 18 jaar te overtuigen om naar de muziekband te luisteren. De website moet dus functioneel makkelijk zijn voor jongeren. Op de website zal ook evenementen aangekondigd worden wanneer de muziekband zal optreden, ze een nieuw liedje uitbrengen en wanneer ze hun EP uitbrengen. Ook zullen de jongeren kledij kunnen kopen over de band.</p>
 </body>
 </html>
