Concurrentie analyse eerste twee groepen bespreken: Muse en Imagine Dragons

--- a/pages/concurrentie.html
+++ b/pages/concurrentie.html
@@ -10,6 +10,31 @@
 </head>
 <body>
     <h1>Concurrentie analyse</h1>
+
+    <dl>
+        <dt>Muse (https://muse.mu/thought-contagion)</dt>
+        <dd>+ Zetten hun nieuw liedje op de startpagina zodat men er meteen kan naar luisteren.</dd>
+        <dd>+ Social media onder het videofragment.</dd>
+        <dd>+ Gebruiken een gepaste achtergrond bij het videofragment.</dd>
+        <dd>+ Gepast letterfont bij zowel het logo als tekst bij fragment.</dd>
+        <dd>- Witte balk rechts van de website.</dd>
+        <dd>- Beperkte website</dd>
+        <dd>- Enkel navigatie naar youtube link en sociale media, geen shop/album/tour.</dd>
+    </dl>
+
+    <dl>
+        <dt>Imagine Dragons (https://www.imaginedragonsmusic.com/)</dt>
+        <dd>+ Zeer overzichtelijke en mooie lay-out</dd>
+        <dd>+ Menubalk helemaal bovenaan als navigatie, sociale media links en rechts staat er een login.</dd>
+        <dd>+ Slidebalk van het belangrijke en recente nieuws.</dd>
+        <dd>+ Officiële kledij om te kopen.</dd>
+        <dd>+ Een kleine menu met het muziek die ze uitgebracht hebben met daaronder een knop met als navigatie naar al hun liedjes.</dd>
+        <dd>+ Link apart naar hun instagram, om hun te volgen en hun te volgen doorheen het jaar met hun foto's.</dd>
+        <dd>+ Als laatste zet men ook het menu van waar en wanneer ze optreden.</dd>
+        <dd>+ Helemaal onderaan kan men zich ook registreren voor eventuele updates.</dd>
+        <dd>- Men gebruikt soms verschillende achtergronden waardoor het soms lastig is om er naar te kijken.</dd>
+        <dd>- Onderaan zet men ook een navigatie naar spotify, deze zou ook boven links bij de andere sociale media kunnen staan.</dd>
+    </dl>
     
 </body>
 </html>
