Veranderingen aan de concurrentie analyse
2 andere groepen gezocht, omdat de doelgroep wat afweek naar mijn 2 vorige groepen. Site opnieuw erbij gezet en afgewerkt.

--- a/pages/concurrentie.html
+++ b/pages/concurrentie.html
@@ -12,16 +12,15 @@
     <h1>Concurrentie analyse</h1>
 
     <dl>
-        <dt>Muse (https://muse.mu/thought-contagion)</dt>
+        <dt>Stikstof (http://stikstofbrussel.be/)</dt>
         <br>
-        <dd>+ Zetten hun nieuw liedje op de startpagina zodat men er meteen kan naar luisteren.</dd>
-        <dd>+ Social media onder het videofragment.</dd>
-        <dd>+ Gebruiken een gepaste achtergrond bij het videofragment.</dd>
-        <dd>+ Gepast letterfont bij zowel het logo als tekst bij fragment.</dd>
-        <dd>- Witte balk rechts van de website.</dd>
-        <dd>- Beperkte website</dd>
-        <dd>- Enkel navigatie naar youtube link en sociale media, geen shop/album/tour.</dd>
-    </dl>
+        <dd>+ Kleine menubalk die navigeert naar hun muziek, hun concenterten, en naar hun contact, moest je hun willen contacteren.</dd>
+        <dd>+ Zetten hun recente/favoriete liedjes op hun website.</dd>
+        <dd>+ Eenvoudige makkelijke website.</dd>
+        <dd>- Zwart wit combinatie vind ik persoonlijk niet geslaagd.</dd>
+        <dd>- Geen sociale media op hun website.</dd>
+        <dd>- Geen shop voor kledij, die toch wel belangrijk is voor een groep waarvan de doelgroep jongeren is.</dd>
+        <dd>- Doordat het een eenvoudige website is, ontbreekt er een grafische lay-out waarvan de bezoeker van de site niet echt kan genieten van de wesbite.</dd>
 
     <dl>
         <dt>Imagine Dragons (https://www.imaginedragonsmusic.com/)</dt>
@@ -38,5 +37,18 @@
         <dd>- Onderaan zet men ook een navigatie naar spotify, deze zou ook boven links bij de andere sociale media kunnen staan.</dd>
     </dl>
     
+    <dl>
+        <dt>Yellow Claw (http://yellowclaw.com/)</dt>
+        <br>
+        <dd>+ Mooie overzichtelijke lay-out.</dd>
+        <dd>+ Sociale media rechts bovenaan.</dd>
+        <dd>+ Als men een beetje scrollt, komt men meteen op de mogelijkheid om kledij te kopen.</dd>
+        <dd>+ Een google map die aantoont waar ze op tour gaan/waar ze al geweest zijn.</dd>
+        <dd>+ Hun 5 recente/favoriete nummers onder elkaar gezet als videofragment.</dd>
+        <dd>+ Onderaan een knop waarvan als je klikt, terug helemaal naar boven van de pagina gaat.</dd>
+        <dd>- De Google map bevindt zich niet 100% centraal van de pagina.</dd>
+        <dd>- Als men te lang scrollt naar beneden, zuller er meer dan 5 liedjes te voorschijn komen, waardoor je snel moet zijn om op de knop te klikken om terug naar boven te kunnen gaan.</dd>
+        <dd>- Men gaat van een blauw/rode achtergrond naar een donkere zwarte achtergrond, vind ik persoonlijk wat pijnlijk aan de ogen.</dd>
+    </dl>
 </body>
 </html>
