--- a/pages/scenarios.html
+++ b/pages/scenarios.html
@@ -10,5 +10,20 @@
 </head>
 <body>
     <h1>Scenario's</h1>
+
+    <dl>
+        <dt>Scenario 1</dt>
+        <br>
+        <dd>Jasper wilt weten waar en wanneer zijn favoriete groep optreedt in de zomervakantie. Hij bekijkt via de site wanneer ze optreden en bespreekt met zijn vrienden om samen te gaan. Ze bestellen hun tickets via de site en kopen meteen ook een shirt, om in de sfeer te komen.</dd>
+
+    </dl>
+
+    <dl>
+            <dt>Scenario 2</dt>
+            <br>
+            <dd>Dries vind het nieuwste nummer van Nuc One goed maar is de titel van dit liedje vergeten. Onlangs hoorde hij het nog op de radio en wilt nu echt weten wat de titel ervan is. Via de website zoekt hij bij recente muziek waardoor hij nu de titel van zijn liedje weet.</dd>
+    
+        </dl>
+
 </body>
 </html>
