--- a/pages/scenarios.html
+++ b/pages/scenarios.html
@@ -25,5 +25,12 @@
     
         </dl>
 
+        <dl>
+                <dt>Scenario 3</dt>
+                <br>
+                <dd>Sofie vindt de nieuwe collectie kledij van Nuc One zeer mooi. Bij deze gaat ze dan ook meteen naar de website om de prijs op te zoeken. Na het praten met haar ouders mag ze de nieuwe pull, kousen en t-shirt kopen. Bij aankoop van 3 producten kreeg ze ook nog eens een gratis armband en stylo bij.</dd>
+        
+            </dl>
+
 </body>
 </html>
