--- a/pages/concurrentie.html
+++ b/pages/concurrentie.html
@@ -12,7 +12,7 @@
     <h1>Concurrentie analyse</h1>
 
     <dl>
-        <dt>Stikstof (http://stikstofbrussel.be/)</dt>
+        <dt><a href="http://stikstofbrussel.be"Target="_blank">Stikstof</a></dt>
         <br>
         <dd>+ Kleine menubalk die navigeert naar hun muziek, hun concenterten, en naar hun contact, moest je hun willen contacteren.</dd>
         <dd>+ Zetten hun recente/favoriete liedjes op hun website.</dd>
@@ -24,7 +24,7 @@
 
     </dl>
     <dl>
-        <dt>Imagine Dragons (https://www.imaginedragonsmusic.com/)</dt>
+        <dt><a href="https://www.imaginedragonsmusic.com"Target="_blank">Imagine Dragons</a></dt>
         <br>
         <dd>+ Zeer overzichtelijke en mooie lay-out</dd>
         <dd>+ Menubalk helemaal bovenaan als navigatie, sociale media links en rechts staat er een login.</dd>
@@ -39,7 +39,7 @@
     </dl>
     
     <dl>
-        <dt>Yellow Claw (http://yellowclaw.com/)</dt>
+        <dt><a href="http://yellowclaw.com"Target="_blank">Yellow Claw</a></dt>
         <br>
         <dd>+ Mooie overzichtelijke lay-out.</dd>
         <dd>+ Sociale media rechts bovenaan.</dd>
