--- a/pages/concurrentie.html
+++ b/pages/concurrentie.html
@@ -16,7 +16,7 @@
         <br>
         <dd>+ Kleine menubalk die navigeert naar hun muziek, hun concenterten, en naar hun contact, moest je hun willen contacteren.</dd>
         <dd>+ Zetten hun recente/favoriete liedjes op hun website.</dd>
-        <dd>+ Eenvoudige makkelijke website.</dd>
+        <dd>+ Eenvoudige makkelijke website: Men moet ni zoeken naar bepaalde navigaties.</dd>
         <dd>- Zwart wit combinatie vind ik persoonlijk niet geslaagd.</dd>
         <dd>- Geen sociale media op hun website.</dd>
         <dd>- Geen shop voor kledij, die toch wel belangrijk is voor een groep waarvan de doelgroep jongeren is.</dd>
@@ -26,7 +26,7 @@
     <dl>
         <dt><a href="https://www.imaginedragonsmusic.com"Target="_blank">Imagine Dragons</a></dt>
         <br>
-        <dd>+ Zeer overzichtelijke en mooie lay-out</dd>
+        <dd>+ Zeer overzichtelijke en mooie lay-out: De kleurencombinatie klopt, de achtergrond gaat samen met de site, alles staat mooi gecentreerd, en men kan alles snel terug vinden.</dd>
         <dd>+ Menubalk helemaal bovenaan als navigatie, sociale media links en rechts staat er een login.</dd>
         <dd>+ Slidebalk van het belangrijke en recente nieuws.</dd>
         <dd>+ Officiële kledij om te kopen.</dd>
@@ -41,7 +41,7 @@
     <dl>
         <dt><a href="http://yellowclaw.com"Target="_blank">Yellow Claw</a></dt>
         <br>
-        <dd>+ Mooie overzichtelijke lay-out.</dd>
+        <dd>+ Mooie overzichtelijke lay-out: Social media staat mooi duidelijk op de site, het logo wordt mooi in kaart gebracht, alles staat ook mooi gecentreerd, op de landkaart na, de kleuren passen ook zeer mooi bij elkaar waardoor dit grafisch zeer mooi oogt.</dd>
         <dd>+ Sociale media rechts bovenaan.</dd>
         <dd>+ Als men een beetje scrollt, komt men meteen op de mogelijkheid om kledij te kopen.</dd>
         <dd>+ Een google map die aantoont waar ze op tour gaan/waar ze al geweest zijn.</dd>
