--- a/pages/scenarios.html
+++ b/pages/scenarios.html
@@ -14,23 +14,24 @@
     <dl>
         <dt>Scenario 1</dt>
         <br>
-        <dd>Jasper wilt weten waar en wanneer zijn favoriete groep optreedt in de zomervakantie. Hij bekijkt via de site wanneer ze optreden en bespreekt met zijn vrienden om samen te gaan. Ze bestellen hun tickets via de site en kopen meteen ook een shirt, om in de sfeer te komen.</dd>
+        <dd>Jasper is 17 jaar oud en is student te Don Bosco. Omdat hij goede examens heeft mag hij op kosten van zijn ouders naar zijn favoriete groep gaan kijken. Hij wilt weten waar en wanneer Nuc One optreedt in de zomervakantie. Hij bekijkt via de site wanneer ze optreden en bespreekt met zijn vrienden om samen te gaan. Ze bestellen hun tickets via de site en kopen meteen ook een shirt, om in de sfeer te komen.</dd>
 
     </dl>
 
     <dl>
             <dt>Scenario 2</dt>
             <br>
-            <dd>Dries vind het nieuwste nummer van Nuc One goed maar is de titel van dit liedje vergeten. Onlangs hoorde hij het nog op de radio en wilt nu echt weten wat de titel ervan is. Via de website zoekt hij bij recente muziek waardoor hij nu de titel van zijn liedje weet.</dd>
+            <dd>Dries, een student van 14 jaar oud, was onderweg met zijn ouders naar school terwijl het nieuwste nummer van Nuc One aan het draaien was op de radio. Hij vond dit nummer goed maar was de titel van dit liedje vergeten. Hij wilt nu echt weten wat de titel ervan is. Via de website van Nuc One zoekt hij bij recente muziek waardoor hij nu de titel van zijn liedje weet.</dd>
     
         </dl>
 
         <dl>
                 <dt>Scenario 3</dt>
                 <br>
-                <dd>Sofie vindt de nieuwe collectie kledij van Nuc One zeer mooi. Bij deze gaat ze dan ook meteen naar de website om de prijs op te zoeken. Na het praten met haar ouders mag ze de nieuwe pull, kousen en t-shirt kopen. Bij aankoop van 3 producten kreeg ze ook nog eens een gratis armband en stylo bij.</dd>
+                <dd>Sofie wordt volgende week 18 jaar oud waardoor ze een lijstje heeft gemaakt met spullen dat ze graag wilt hebben. Ze vindt de nieuwe collectie kledij van Nuc One zeer mooi. Bij deze gaat ze dan ook meteen naar de website om de prijs op te zoeken. Na het praten met haar ouders mag ze de nieuwe pull, kousen en t-shirt kopen. Bij aankoop van 3 producten kreeg ze ook nog eens een gratis armband en stylo bij. Een geslaagd verjaardagscadeau.</dd>
         
             </dl>
+
 
 </body>
 </html>
