Alles even opnieuw geplaatst

--- a/pages/styleguide.html
+++ b/pages/styleguide.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Digital Styleguide - Eindopdracht NMD-I</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
-    <link rel="stylesheet" href="css/screen.css">
+    <link rel="stylesheet" href="css/pages.css">
     <script src="js/jquery-2.1.1.js"></script>
 </head>
-<body>
+<body id="styleguide">
     <div id="container">
         <header>
             <nav class="fixed">
