--- a/pages/scenarios.html
+++ b/pages/scenarios.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
     <link rel="stylesheet" href="css/pages.css">
 </head>
-<body>
+<body id="default">
     <h1>Scenario's</h1>
 
     <dl>
