--- a/pages/intro.html
+++ b/pages/intro.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
     <link rel="stylesheet" href="css/pages.css">
 </head>
-<body id="default">
+<body>
     <h1>New Media Design I</h1>
     <h2>Eindopdracht</h2>
 
@@ -25,6 +25,8 @@
     </p>
     
     <h1>Introductie</h1>
-    <p>Als eindwerk hebben we de opdracht gekregen om een site te maken rondom een muziekband die jongeren tussen de 14 en 18 jaar luisteren. Ik heb bewust voor deze doelgroep gekozen omdat ik elke dag in contact sta met jongeren, zowel buiten als binnen school. Muziek is ook een deel van ons dagelijks leven waarmee we elke dag in contact komen te staan. Het hoofddoel van de website is om mensen van 14 tot 18 jaar te overtuigen om naar de muziekband te luisteren. De website moet dus functioneel makkelijk zijn voor jongeren. Op de website zal ook evenementen aangekondigd worden wanneer de muziekband zal optreden, ze een nieuw liedje uitbrengen en wanneer ze hun EP uitbrengen. Ook zullen de jongeren kledij kunnen kopen over de band. De naam van mij muziekgroep zal "Nuc One" zijn. Deze heeft niet echt een betekenis maar vind het wel een passende naam voor jongeren. Deze muziekband zal maar uit 1 lid bestaan. Nuc One brengt alleen maar "house" muziek uit, zal remixen maken over bekende liedjes en zal ook eigen house muziek uitbrengen. Zowel jongens als meisjes zullen deze muziek dus luisteren. </p>
+    <p>Als eindwerk hebben we de opdracht gekregen om een site te maken rondom een muziekband die jongeren tussen de 14 en 18 jaar luisteren. Ik heb bewust voor deze doelgroep gekozen omdat ik elke dag in contact sta met jongeren, zowel buiten als binnen school. Muziek is ook een deel van ons dagelijks leven waarmee we elke dag in contact komen te staan. <br>
+    Het hoofddoel van de website is om mensen van 14 tot 18 jaar te overtuigen om naar de muziekband te luisteren. De website moet dus functioneel makkelijk zijn voor jongeren. Op de website zal ook evenementen aangekondigd worden wanneer de muziekband zal optreden, ze een nieuw liedje uitbrengen en wanneer ze hun EP uitbrengen. Ook zullen de jongeren kledij kunnen kopen over de band. Een eigen account aanmaken voor up-to-date te blijven voor al het nieuws is ook een mogelijkheid.<br>
+    De naam van mij muziekgroep zal "Nuc One" zijn. Deze heeft niet echt een betekenis maar vind het wel een passende naam voor jongeren. Deze muziekband zal maar uit 1 lid bestaan. Nuc One brengt alleen maar "house" muziek uit, zal remixen maken over bekende liedjes en zal ook eigen house muziek uitbrengen. Ik heb bewust voor dit genre gekozen omdat ik dagelijks naar house muziek luister en het een rustige vibe in zich heeft. Zowel jongens als meisjes zullen deze muziek dus kunnen luisteren. </p>
 </body>
 </html>
