--- a/pages/intro.html
+++ b/pages/intro.html
@@ -10,7 +10,7 @@
 </head>
 <body id="default">
     <h1>New Media Design I</h1>
-    <h2>Eindopdracht</h2>
+    <h2>Nuc One</h2>
 
     <dl class="info">
         <dt>Naam</dt>
